# letterspacer

./: Cargo.toml  Justfile  LICENSE.txt  README.md
src/: computation.rs  config.rs  drawing.rs  main.rs  parameters.rs
src/topological_sort/: mod.rs
testdata/Merriweather-LightItalic-Respaced.ufo/glyphs/: A_.glif  A_E_.glif  B_.glif  B_e-cy.glif  C_.glif  C_he-cy.glif  C_heabkhasian-cy.glif  C_heverticalstroke-cy.glif  D_.glif  D_Z_.glif  D_Z_caron.glif  D_e-cy.glif  D_e-cy.loclB_G_R_.glif  D_elta.glif  D_je-cy.glif  D_z.glif  D_zhe-cy.glif  E_-cy.glif  E_.glif  E_f-cy.glif  E_f-cy.loclB_G_R_.glif  E_l-cy.glif  E_l-cy.loclB_G_R_.glif  E_ldescender-cy.glif  E_lhook-cy.glif  E_nL_eftH_ook-cy.glif  E_ng.glif  E_nghe-cy.glif  E_nhook-cy.glif  E_reversed-cy.glif  E_sdescender-cy.loclB_S_H_.glif  E_zh.glif  E_zhcaron.glif  F_.glif  F_dotaccent.glif  F_ita-cy.glif  G_.glif  G_e-cy.glif  G_ermandbls.glif  G_estrokehook-cy.glif  (+653 more)
testdata/Merriweather-LightItalic.ufo/: fontinfo.plist
testdata/Merriweather-LightItalic.ufo/glyphs/: A_.glif  A_E_.glif  B_.glif  B_e-cy.glif  C_.glif  C_he-cy.glif  C_heabkhasian-cy.glif  C_heverticalstroke-cy.glif  D_.glif  D_Z_.glif  D_Z_caron.glif  D_e-cy.glif  D_e-cy.loclB_G_R_.glif  D_elta.glif  D_je-cy.glif  D_z.glif  D_zhe-cy.glif  E_-cy.glif  E_.glif  E_f-cy.glif  E_f-cy.loclB_G_R_.glif  E_l-cy.glif  E_l-cy.loclB_G_R_.glif  E_ldescender-cy.glif  E_lhook-cy.glif  E_nL_eftH_ook-cy.glif  E_ng.glif  E_nghe-cy.glif  E_nhook-cy.glif  E_reversed-cy.glif  E_sdescender-cy.loclB_S_H_.glif  (+596 more)
testdata/NestedComponents.ufo/: fontinfo.plist  lib.plist
(+7 files in other folders)
