[package]
name = "letterspacer"
version = "0.1.0"
authors = ["Nikolaus Waxweiler <madigens@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
env_logger = "0.9"
kurbo = "0.8"
log = "0.4"
norad = { version = "0.6", features = ["kurbo"] }
structopt = { version = "0.3", default-features = false }
